Revise README for Laboratory Quality Control System
Updated project description and features in README.